# B2DXFitters

./: CMakeLists.txt
B2DXFitters/: Bd2DhModels.h  BdPTAcceptance.h  Bs2Dsh2011TDAnaModels.h  Bs2DshDsHHHPi0Models.h  Bs2DshModels.h  Bs2DssthModels.h  CPObservable.h  CombBkgPTPdf.h  DLLTagCombiner.h  DTAcceptanceLHCbNote2007041.h  DecRateCoeff.h  DecRateCoeff_Bd.h  DecayTreeTupleSucksFitter.h  Dilution.h  FinalStateChargePdf.h  FitMeTool.h  GeneralModels.h  GeneralUtils.h  HistPID1D.h  HistPID2D.h  IfThreeWay.h  IfThreeWayCat.h  IfThreeWayCatPdf.h  IfThreeWayPdf.h  Inverse.h  KinHack.h  MCBackground.h  MDFitterSettings.h  MassFitUtils.h  MistagCalibration.h  MistagDistribution.h  NonOscTaggingPdf.h  PIDCalibrationSample.h  PlotSettings.h  PowLawAcceptance.h  PropertimeResolutionModels.h  QRDecomposition.h  RangeAcceptance.h  RooAbsEffResModel.h  RooBinned1DQuinticBase.h  (+25 more)
cmt/: requirements
data/: 2010DataNtuple_Bd2DPi.root  B2DPiConfigForNominalMassFit.py  Bd2DPiPhysBkg_Bd2DK.root  Bd2DPiPhysBkg_Bd2DRho.root  Bd2DPiPhysBkg_Bd2DX.root  Bd2DPiPhysBkg_Bd2DstPi.root  Bs2DsKConfigForBs2DsKst.py  Bs2DsKConfigForFixedParamSyst_AccBeta_neg.py  Bs2DsKConfigForFixedParamSyst_AccBeta_pos.py  Bs2DsKConfigForFixedParamSyst_AccOffset_neg.py  Bs2DsKConfigForFixedParamSyst_AccOffset_pos.py  Bs2DsKConfigForFixedParamSyst_AccSlope_neg.py  Bs2DsKConfigForFixedParamSyst_AccSlope_pos.py  Bs2DsKConfigForFixedParamSyst_AccTurnon_neg.py  Bs2DsKConfigForFixedParamSyst_AccTurnon_pos.py  Bs2DsKConfigForFixedParamSyst_Backgrounds_MassFitToys5M.py  Bs2DsKConfigForFixedParamSyst_DGammas_neg.py  Bs2DsKConfigForFixedParamSyst_DGammas_pos.py  Bs2DsKConfigForFixedParamSyst_DeltaMs_neg.py  Bs2DsKConfigForFixedParamSyst_DeltaMs_pos.py  Bs2DsKConfigForFixedParamSyst_DetAsy_neg.py  Bs2DsKConfigForFixedParamSyst_DetAsy_pos.py  Bs2DsKConfigForFixedParamSyst_Gammas_neg.py  Bs2DsKConfigForFixedParamSyst_Gammas_pos.py  Bs2DsKConfigForFixedParamSyst_ProdAsy_neg.py  Bs2DsKConfigForFixedParamSyst_ProdAsy_pos.py  Bs2DsKConfigForFixedParamSyst_p0.py  Bs2DsKConfigForFixedParamSyst_p0_neg.py  Bs2DsKConfigForFixedParamSyst_p0_pos.py  Bs2DsKConfigForFixedParamSyst_p1.py  Bs2DsKConfigForFixedParamSyst_p1_pos.py  Bs2DsKConfigForGenerator.py  Bs2DsKConfigForGenerator5M.py  (+100 more)
doc/: conventions.txt  (+2 more)
(+745 files in other folders)
